--- a/src/components/style.css
+++ b/src/components/style.css
@@ -8,10 +8,11 @@
 }
 /* ---------------------------- */
 /* revisar */
-/* .posicion{
-  position: fixed;
+.posicion{
+  position: sticky;
+  top: 0%;
   z-index: 2;
-} */
+}
 /* ------------------------ */
 
 
