--- a/src/components/style.css
+++ b/src/components/style.css
@@ -6,14 +6,16 @@
   background-color: #E9EAEC 
   ;
 }
-/* ---------------------------- */
-/* revisar */
+.colorAzul{
+  color: blue;
+}
+
 .posicion{
   position: sticky;
   top: 0%;
   z-index: 2;
 }
-/* ------------------------ */
+
 
 
 @media all and (max-width: 767px) {
